--- a/.github/workflows/push-to-replicate.yml
+++ b/.github/workflows/push-to-replicate.yml
@@ -1,22 +1,37 @@
-- name: Set up Python
-  uses: actions/setup-python@v4
-  with:
-    python-version: "3.10"
+name: Push to Replicate
 
-- name: Install Cog
-  run: |
-    curl -L https://github.com/replicate/cog/releases/latest/download/cog_Linux_x86_64 -o cog
-    chmod +x cog
-    sudo mv cog /usr/local/bin/cog
+on:
+  workflow_dispatch:
 
-- name: Install Dependencies
-  run: pip install -r requirements.txt || true
+jobs:
+  build-and-push:
+    runs-on: ubuntu-latest
 
-- name: Validate Cog Setup
-  run: cog check
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v3
 
-- name: Authenticate with Replicate
-  run: echo "${{ secrets.REPLICATE_TOKEN }}" | cog login --token-stdin
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
 
-- name: Push model to Replicate
-  run: cog push r8.im/glenihenacho/pro-grounded-sam
+      - name: Install Cog
+        run: |
+          curl -L https://github.com/replicate/cog/releases/latest/download/cog_Linux_x86_64 -o cog
+          chmod +x cog
+          sudo mv cog /usr/local/bin/cog
+
+      - name: Install Dependencies (best effort)
+        run: |
+          if [ -f requirements.txt ]; then pip install -r requirements.txt || true; fi
+
+      - name: Validate Cog Setup
+        run: cog check
+
+      - name: Authenticate with Replicate
+        run: |
+          echo "${{ secrets.REPLICATE_TOKEN }}" | cog login --token-stdin
+
+      - name: Push model to Replicate
+        run: cog push r8.im/glenihenacho/pro-grounded-sam
